syntax = "proto3";

package api.order.service.v1;

import "google/api/annotations.proto";

option go_package = "github.com/peter-wow/seckill/api/order/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.order.service.v1";

service Order {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderReply) {
        option (google.api.http) = {
            post: "/order"
            body: "*"
        };
    }
    rpc CreateSeckillOrder (CreateSeckillOrderRequest) returns (CreateSeckillOrderReply) {
        option (google.api.http) = {
            post: "/seckill/order"
            body: "*"
        };
    }
    rpc CreateSeckillOrderTry (CreateSeckillOrderRequest) returns (CreateSeckillOrderReply) {
        option (google.api.http) = {
            post: "/seckill/orderTry"
            body: "*"
        };
    }
    rpc CreateSeckillOrderConfirm (CreateSeckillOrderRequest) returns (CreateSeckillOrderReply) {
        option (google.api.http) = {
            post: "/seckill/orderConfirm"
            body: "*"
        };
    }
    rpc CreateSeckillOrderCancel (CreateSeckillOrderRequest) returns (CreateSeckillOrderReply) {
        option (google.api.http) = {
            post: "/seckill/orderCancel"
            body: "*"
        };
    }

    rpc UpdateOrder (UpdateOrderRequest) returns (UpdateOrderReply);
    rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderReply);
    rpc GetOrder (GetOrderRequest) returns (GetOrderReply);
    rpc ListOrder (ListOrderRequest) returns (ListOrderReply);
}

message CreateOrderRequest {
    int64 gid = 1;
    int64 amount = 2;
}
message CreateOrderReply {}

message CreateSeckillOrderRequest {
    int64 gid = 1;
    int64 amount = 2;
}
message CreateSeckillOrderReply {
    string dtm_result = 1;
}

message UpdateOrderRequest {}
message UpdateOrderReply {}

message DeleteOrderRequest {}
message DeleteOrderReply {}

message GetOrderRequest {}
message GetOrderReply {}

message ListOrderRequest {}
message ListOrderReply {}